@@ -31,8 +31,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-apple-darwin11.0.0
-host_triplet = i686-apple-darwin11.0.0
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-w64-mingw32
 subdir = tests/testfiles
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -47,62 +47,62 @@ CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run aclocal-1.11
-AMTAR = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run tar
-AUTOCONF = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run automake-1.11
-AWK = gawk
-CC = gcc
+ACLOCAL = ${SHELL} /home/user/md5deep/branches/version4/missing --run aclocal-1.11
+AMTAR = ${SHELL} /home/user/md5deep/branches/version4/missing --run tar
+AUTOCONF = ${SHELL} /home/user/md5deep/branches/version4/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/user/md5deep/branches/version4/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/user/md5deep/branches/version4/missing --run automake-1.11
+AWK = mawk
+CC = x86_64-w64-mingw32-gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -I/opt/local/include -I/usr/local/include  -D_FORTIFY_SOURCE=2 -Wall -g -D_THREAD_SAFE -pthread
-CPP = gcc -E
-CPPFLAGS = -I/opt/local/include -I/usr/local/include 
-CXX = g++
+CFLAGS = -I/usr/local/include  -D_FORTIFY_SOURCE=2 -Wall -g 
+CPP = x86_64-w64-mingw32-gcc -E
+CPPFLAGS = -DPTW32_STATIC_LIB -I/usr/local/include -DUNICODE -D_UNICODE -D__MSVCRT_VERSION__=0x0601 -DWINVER=0x0500 -D_WIN32_WINNT=0x0500  
+CXX = x86_64-w64-mingw32-g++
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS =  -D_FORTIFY_SOURCE=2 -Wall -g -D_THREAD_SAFE -pthread
+CXXFLAGS =  -D_FORTIFY_SOURCE=2 -Wall -g -Wno-format  --static
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
-ECHO_C = \c
-ECHO_N = 
+ECHO_C = 
+ECHO_N = -n
 ECHO_T = 
-EGREP = /usr/bin/grep -E
-EXEEXT = 
-GREP = /usr/bin/grep
-INSTALL = /opt/local/bin/ginstall -c
+EGREP = /bin/grep -E
+EXEEXT = .exe
+GREP = /bin/grep
+INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LDFLAGS = -L/opt/local/lib -L/usr/local/lib 
-LIBOBJS =  ${LIBOBJDIR}lstat$U.o
-LIBS = -pthread 
-LTLIBOBJS =  ${LIBOBJDIR}lstat$U.lo
-MAKEINFO = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run makeinfo
-MKDIR_P = /opt/local/bin/gmkdir -p
+LDFLAGS = -L/usr/local/lib 
+LIBOBJS =  ${LIBOBJDIR}lstat$U.o ${LIBOBJDIR}memcmp$U.o ${LIBOBJDIR}stat$U.o
+LIBS = -lws2_32 -lgdi32 -liberty  -lpthread
+LTLIBOBJS =  ${LIBOBJDIR}lstat$U.lo ${LIBOBJDIR}memcmp$U.lo ${LIBOBJDIR}stat$U.lo
+MAKEINFO = ${SHELL} /home/user/md5deep/branches/version4/missing --run makeinfo
+MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = md5deep
 PACKAGE_BUGREPORT = research@jessekornblum.com
 PACKAGE_NAME = MD5DEEP
-PACKAGE_STRING = MD5DEEP 4.0.0_alpha_006
+PACKAGE_STRING = MD5DEEP 4.0.0_alpha_007
 PACKAGE_TARNAME = md5deep
 PACKAGE_URL = 
-PACKAGE_VERSION = 4.0.0_alpha_006
+PACKAGE_VERSION = 4.0.0_alpha_007
 PATH_SEPARATOR = :
-PTHREAD_CC = gcc
-PTHREAD_CFLAGS = -D_THREAD_SAFE -pthread
-PTHREAD_LIBS = -pthread
+PTHREAD_CC = x86_64-w64-mingw32-gcc
+PTHREAD_CFLAGS = 
+PTHREAD_LIBS = -lpthread
 SET_MAKE = 
-SHELL = /bin/sh
-STRIP = 
-VERSION = 4.0.0_alpha_006
-abs_builddir = /Users/simsong/md5deep/branches/version4/tests/testfiles
-abs_srcdir = /Users/simsong/md5deep/branches/version4/tests/testfiles
-abs_top_builddir = /Users/simsong/md5deep/branches/version4
-abs_top_srcdir = /Users/simsong/md5deep/branches/version4
-ac_ct_CC = gcc
-ac_ct_CXX = g++
+SHELL = /bin/bash
+STRIP = x86_64-w64-mingw32-strip
+VERSION = 4.0.0_alpha_007
+abs_builddir = /home/user/md5deep/branches/version4/tests/testfiles
+abs_srcdir = /home/user/md5deep/branches/version4/tests/testfiles
+abs_top_builddir = /home/user/md5deep/branches/version4
+abs_top_srcdir = /home/user/md5deep/branches/version4
+ac_ct_CC = 
+ac_ct_CXX = 
 am__include = include
 am__leading_dot = .
 am__quote = 
@@ -110,32 +110,32 @@ am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 ax_pthread_config = 
 bindir = ${exec_prefix}/bin
-build = i686-apple-darwin11.0.0
+build = x86_64-unknown-linux-gnu
 build_alias = 
-build_cpu = i686
-build_os = darwin11.0.0
-build_vendor = apple
+build_cpu = x86_64
+build_os = linux-gnu
+build_vendor = unknown
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-apple-darwin11.0.0
-host_alias = 
-host_cpu = i686
-host_os = darwin11.0.0
-host_vendor = apple
+host = x86_64-w64-mingw32
+host_alias = x86_64-w64-mingw32
+host_cpu = x86_64
+host_os = mingw32
+host_vendor = w64
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/simsong/md5deep/branches/version4/install-sh
+install_sh = ${SHELL} /home/user/md5deep/branches/version4/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = /opt/local/bin/gmkdir -p
+mkdir_p = /bin/mkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
 prefix = /usr/local
